# equality_constrained_ddp

./: pyproject.toml
src/equality_constrained_ddp/: __init__.py  aaaa.ipynb  model.py  solver.py
